<resources>
    <string name="app_name">Pills   Assistant   PL</string>

    <string name="unknownDevice">Nieznane urządzenie</string>
    <string name="ble_not_supported">BLE nie jest obsługiwany</string>
    <string name="connected">Połączony</string>
    <string name="disconnected">Rozłączony</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth/GPS jest wyłączony.</string>
    <string name="unknown_characteristic">Nieznana charakterystyka</string>
    <string name="unknown_service">Nieznany serwis</string>
    <string name="detected_devices">Wykryte urządzenia :</string>
    <string name="Urzadzenie_polaczone">Urządzenie połączone   </string>
    <string name="enter_text">Wprowadź ilość : </string>
    <string name="add_new_pills_text">Ile masz tabeletek?</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Skanuj</string>
    <string name="menu_stop">Stop</string>

    <!-- Device Controls -->
    <string name="jeden">Przegródka #1</string>
    <string name="dwa">Przegródka #2</string>
    <string name="trzy">Przegródka #3</string>
    <string name="cztery">Przegródka #4</string>

    <string name="ilosc_1">---</string>
    <string name="ilosc_2">---</string>
    <string name="ilosc_3">---</string>
    <string name="ilosc_4">---</string>
    <string name="plus">+</string>
    <string name="hours_count">Co ile godzin?</string>
    <string name="okay">OK</string>
    <string name="take">W E Ź </string>
    <string name="a_pill">T A B L E T K Ę !</string>
    <string name="i_took">WZIĄŁEM</string>
    <string name="do_you_want_to_delete">Czy chcesz usunąć </string>
    <string name="do_you_want_to_delete_two">wszystkie alarmy?</string>
    <string name="back">WRÓĆ</string>
    <string name="set_alarms">Ustaw alarmy </string>
    <string name="set_alarms2">w kolejności chronologicznej</string>
    <string name="set_alarms3">Nie ustawiaj niepotrzebnych alarmów!</string>
    <string name="welcome">Witaj w aplikacji</string>
    <string name="welcome_xml_1">Użyj, aby ustawić ilość tabletek w przegródce</string>
    <string name="welcome_xml_2">Użyj, aby ustawić plan alarmów dla danej przegródki</string>
    <string name="welcome_xml_3">Ten przycisk umożliwia skasowanie wszystkich zaplanowanych alarmów. Jest konieczny do ustawienia nowego planu.</string>
    <string name="welcome_xml_4">Przycisk informacyjny służy do przeglądania wszystkich zaplanowanych alarmów dla dlanej przegródki</string>
</resources>
