<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/firstLine"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jeden"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:id="@+id/name1"
                    />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/ilosc_1"
                    android:layout_below="@id/name1"
                    android:text="@string/ilosc_1"/>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dwa"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/name_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ilosc_2"
                    android:gravity="center_horizontal"
                    android:id="@+id/ilosc_2"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_below="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trzy"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:id="@+id/name_3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ilosc_3"
                    android:layout_below="@id/name_3"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/ilosc_3"/>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cztery"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:id="@+id/name_4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_4"
                    android:text="@string/ilosc_4"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:id="@+id/ilosc_4"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>