<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/pill_confirmation_backgroud_layout">
    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_pill"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/i_took_a_pill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_took"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@color/blackText"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>