<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alarms"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alarms2"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:text="@string/set_alarms3"
            android:textSize="20sp"
            android:gravity="center_horizontal"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="1."
                android:textSize="24sp"/>
            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/timepicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                >

            </TimePicker>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="2."
                android:textSize="24sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/timepicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner">

            </TimePicker>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="3."
                android:textSize="24sp"/>
            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/timepicker3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                >

            </TimePicker>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="4."
                android:textSize="24sp"/>
            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/timepicker4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                >

            </TimePicker>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="5."
                android:textSize="24sp"/>
            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/timepicker5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                >

            </TimePicker>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:textColor="@android:color/white"
                android:background="@color/blackText"
                android:id="@+id/alarm_popup_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>



    </LinearLayout>
</ScrollView>
